--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -166,7 +166,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" asp-area="" asp-controller="Product" asp-action="Create">新品上架</a>
                         <a class="collapse-item" asp-area="" asp-controller="Product" asp-action="Index">商品查詢</a>
-                        <a class="collapse-item" href="#">庫存管理</a>
+                        <a class="collapse-item" asp-area="" asp-controller="ProductStock" asp-action="Index">庫存管理</a>
                     </div>
                 </div>
             </li>
