--- a/StarProject/Views/LostInfo/Edit.cshtml
+++ b/StarProject/Views/LostInfo/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StarProject.ViewModel.LostInfoVM
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "遺失物編輯";
 }
 
 <head>
@@ -22,10 +22,42 @@
             align-items: center;
             border: 1px solid #ddd; /* 可選，看框線 */
         }
+
+        .btn-edit {
+            --bs-btn-color: #fff;
+            --bs-btn-bg: #0d6efd;
+            --bs-btn-border-color: #0d6efd;
+            --bs-btn-hover-color: #fff;
+            --bs-btn-hover-bg: #527bcc;
+            --bs-btn-hover-border-color: #0d6efd;
+            --bs-btn-focus-shadow-rgb: 217, 164, 6;
+            --bs-btn-active-color: #fff;
+            --bs-btn-active-bg:#527bcc;
+            --bs-btn-active-border-color: #0d6efd;
+            --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+        }
+
+        .btn-outline-back {
+            --bs-btn-color: #DC3545;
+            --bs-btn-border-color: #DC3545;
+            --bs-btn-hover-color: #DC3545;
+            --bs-btn-hover-bg: #f8e6e9;
+            --bs-btn-hover-border-color: #DC3545;
+            --bs-btn-focus-shadow-rgb: 255, 193, 7;
+            --bs-btn-active-color: #DC3545;
+            --bs-btn-active-border-color: #DC3545;
+            --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+            --bs-gradient: none;
+        }
+        
+        .text-distance {
+            letter-spacing: 5px; /* 正值：字母間距變大，負值：變小 */
+            text-align: center; /* 文字置中 */
+        }
     </style>
 </head>
 
-<h1>編輯</h1>
+<h1 class="fw-bold">遺失物編輯</h1>
 <hr />
 <div class="row">
     <div class="d-flex">
@@ -76,8 +108,11 @@
                     <input asp-for="OwnerPhone" class="form-control" id="OwnerPhone" />
                 </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group d-flex gap-2 mt-2 text-distance">
+                <button type="submit" value="Save" class="btn btn-edit flex-fill fw-bold fs-5 text-distance">
+                    <i class="fa-solid fa-pen-nib"></i>修改
+                </button>
+                <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
             </div>
         </form>
         <div class="flex-fill d-flex justify-content-center">
@@ -88,10 +123,6 @@
         </div>
         
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
