--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -112,6 +112,7 @@
 
                 <div id="collapseInfo" class="collapse" data-bs-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" asp-area="" asp-controller="CompanyNotifies" asp-action="Index">公司內部公告</a>
                         <a class="collapse-item" href="#">官網公告</a>
                         <a class="collapse-item" href="#">知識庫管理</a>
                         <a class="collapse-item" asp-area="" asp-controller="LostInfo" asp-action="Index">遺失物管理</a>
