--- a/StarProject/Views/Events/List.cshtml
+++ b/StarProject/Views/Events/List.cshtml
@@ -39,13 +39,13 @@
 
         .table > thead > tr > th {
             font-size: 18px !important;
-            color: #fff;
+            color: #FFFFFF;
             background-color: #2B4C8C;
-            letter-spacing: .2rem;
+            letter-spacing: 0.2rem;
         }
 
         .table > tbody > tr.active > td {
-            background-color: rgba(223,245,255,.52) !important;
+            background-color: rgba(223, 245, 255, 0.521) !important;
         }
 
         .table > tbody > tr > td {
@@ -53,7 +53,7 @@
         }
 
         .search:hover {
-            background-color: rgba(253,246,222,.897);
+            background-color: rgba(253,246,222,0.897);
         }
 
         .table tbody tr:hover td {
@@ -61,7 +61,7 @@
         }
 
         .table-rounded {
-            border-radius: 20px;
+            border-radius: 10px;
             overflow: hidden;
         }
 
