更新ProductIndex的html樣，把分頁複製到share

--- a/StarProject/Views/Product/_ProductRows.cshtml
+++ b/StarProject/Views/Product/_ProductRows.cshtml
@@ -24,9 +24,8 @@
         <td>
             @Html.DisplayFor(modelItem => item.UpdateDate)
         </td>
-        <td style="width:116px;text-align: center;">
-            <button type="button"
-                    class="btn btn-color btn-sm btn-detail">
+        <td style="width:116px; text-align: center;">
+            <button type="button" class="btn btn-color btn-sm btn-detail">
                 詳細內容
             </button>
         </td>
