--- a/StarProject/wwwroot/css/TextEditing.css
+++ b/StarProject/wwwroot/css/TextEditing.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@font-face {
+    font-family: 'ChironGoRoundTC';
+    src: url('../fonts/ChironGoRoundTC-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 @media print {
     body {
@@ -6,18 +11,51 @@
     }
 }
 
+/* 覆蓋 CKEditor 預設字型 */
 :root {
-    --ck-content-font-family: 'Lato';
+    --ck-content-font-family: 'ChironGoRoundTC', sans-serif;
+    --ck-content-font-size: 16px; /* 可以依需求調整 */
+    --ck-content-font-color: #000; /* 保持黑色 */
+    --ck-content-line-height: 1.6; /* 行高舒適 */
 }
 
-.main-container {
-    font-family: var(--ck-content-font-family);
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+
+.btn-topbar {
+    --bs-btn-bg: rgb(250, 208, 72);
+    --bs-btn-border-color: rgb(250, 208, 72);
+    --bs-btn-hover-bg: rgba(250, 208, 72, 0.692);
+    --bs-btn-hover-border-color: rgba(250, 208, 72, 0.692);
+    --bs-btn-focus-shadow-rgb: 217, 164, 6;
+    --bs-btn-active-bg: #ffcd39;
+    --bs-btn-active-border-color: #ffc720;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
-.editor-container_classic-editor .editor-container__editor {
-    min-width: 795px;
-    max-width: 795px;
+.btn-outline-back {
+    --bs-btn-color: #DC3545;
+    --bs-btn-border-color: #DC3545;
+    --bs-btn-hover-color: #DC3545;
+    --bs-btn-hover-bg: #f8e6e9;
+    --bs-btn-hover-border-color: #DC3545;
+    --bs-btn-focus-shadow-rgb: 255, 193, 7;
+    --bs-btn-active-color: #DC3545;
+    --bs-btn-active-border-color: #DC3545;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-gradient: none;
 }
+
+.text-distance {
+    letter-spacing: 5px; /* 正值：字母間距變大，負值：變小 */
+    text-align: center; /* 文字置中 */
+}
+
+
+.ck {
+    font-family: var(--ck-content-font-family) !important;
+}
+
+.ck-editor__editable {
+    min-height: 350px; /* 編輯區最小高度 */
+}
+
+
