--- a/StarProject/wwwroot/css/home.css
+++ b/StarProject/wwwroot/css/home.css
@@ -143,6 +143,9 @@ main {
 
 }
 
+
+
+
 /* 小鈴鐺通知樣式 */
 .badge {
     display: inline-block;
@@ -171,7 +174,7 @@ main {
     padding: 0.5rem 1rem;
     margin: 0 0.5rem;
     display: block;
-    color: #3a3b45;
+    color: #3a3b45 !important;
     text-decoration: none;
     border-radius: 0.35rem;
     white-space: nowrap;
@@ -186,7 +189,7 @@ main {
     background-color: #041E40;
 }
 
-/* sidebar 標題 */
+/* sidebar 標題 */ 
 .sidebar .sidebar-brand {
     height: 80px;
     text-decoration: none;
@@ -370,7 +373,7 @@ main {
     padding: 0.5rem 1rem;
     margin: 0 0.5rem;
     display: block;
-    color: #3a3b45;
+    color: #3a3b45 !important;
     text-decoration: none;
     border-radius: 0.35rem;
     white-space: nowrap;
