--- a/StarProject/Views/Product/Edit.cshtml
+++ b/StarProject/Views/Product/Edit.cshtml
@@ -1,19 +1,50 @@
 ﻿@model StarProject.ViewModels.ProductEditViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "商品編輯";
 }
 <head>
     <style>
-        .avatar-object-fit {
-            width: 200px;
-            overflow: hidden;
-            > img{
-            display: block;
-            width: 100%;
-            aspect-ratio: 1 / 1;
-            object-fit: cover;
-            }
+        * {
+            padding: 0;
+            margin: 0;
+        }
+
+        .btn-topbar {
+            --bs-btn-bg: rgb(250, 208, 72);
+            --bs-btn-border-color: rgb(250, 208, 72);
+            --bs-btn-hover-bg: rgba(250, 208, 72, 0.692);
+            --bs-btn-hover-border-color: rgba(250, 208, 72, 0.692);
+            --bs-btn-focus-shadow-rgb: 217, 164, 6;
+            --bs-btn-active-bg: #ffcd39;
+            --bs-btn-active-border-color: #ffc720;
+            --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+        }
+
+        .btn-outline-back {
+            --bs-btn-color: #DC3545;
+            --bs-btn-border-color: #DC3545;
+            --bs-btn-hover-color: #DC3545;
+            --bs-btn-hover-bg: #f8e6e9;
+            --bs-btn-hover-border-color: #DC3545;
+            --bs-btn-focus-shadow-rgb: 255, 193, 7;
+            --bs-btn-active-color: #DC3545;
+            --bs-btn-active-border-color: #DC3545;
+            --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+            --bs-gradient: none;
+        }
+
+        .btn-outline-excel {
+            --bs-btn-color: rgb(0, 0, 0);
+            --bs-btn-border-color: rgb(0, 0, 0);
+            --bs-btn-hover-color: rgb(0, 0, 0);
+            --bs-btn-hover-bg: rgba(250, 208, 72, 0.692);
+            --bs-btn-hover-border-color: rgb(0, 0, 0);
+            --bs-btn-focus-shadow-rgb: 255, 193, 7;
+            --bs-btn-active-color: rgb(0, 0, 0);
+            --bs-btn-active-border-color: rgb(0, 0, 0);
+            --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+            --bs-gradient: none;
         }
 
         .del-btn {
@@ -36,108 +67,110 @@
     </style>
 </head>
 
-<h1>Edit</h1>
-
-<h4>商品資料</h4>
-<hr />
-<div class="row">
-    <div class="col-10 col-lg-8 m-5">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group d-flex align-items-center mb-3 row">
-                <div class="col-4 col-lg-2">
-                    <label asp-for="Product.No" class="control-label"></label>
+<h1 class="fw-bold">商品編輯</h1>
+<div class="p-4 mt-3 rounded-4 bg-white">
+    <h3 class="fw-bold mb-3"><i class="fa-solid fa-circle-info me-2"></i>基本資料</h3>
+    <div class="row m-1 border border-1 rounded">
+        <div class="col-6 m-5">
+            <form asp-action="Edit">
+                <div class="form-group d-flex align-items-center mb-3 row">
+                    <div class="col-4 col-lg-2 fw-bold fs-5">
+                        <label asp-for="Product.No" class="control-label"></label>
+                    </div>
+                    <div class="col-8 col-lg-10">
+                        <input asp-for="Product.No" readonly class="form-control-plaintext" />
+                    </div>
                 </div>
-                <div class="col-8 col-lg-10">
-                    <input asp-for="Product.No" readonly class="form-control-plaintext" />
+                <div class="form-group d-flex align-items-center mb-3 row">
+                    <div class="col-4 col-lg-2 fw-bold fs-5">
+                        <label asp-for="Product.Name" class="control-label"></label>
+                    </div>
+                    <div class="col-8 col-lg-10">
+                        <input asp-for="Product.Name" class="form-control" placeholder="商品名稱不可超過30個字" />
+                        <span asp-validation-for="Product.Name" class="text-danger"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group d-flex align-items-center mb-3 row">
-                <div class="col-4 col-lg-2">
-                    <label asp-for="Product.Name" class="control-label"></label>
+                <div class="form-group d-flex align-items-center mb-3 row">
+                    <div class="col-4 col-lg-2 fw-bold fs-5">
+                        <label asp-for="Product.ProCategoryNoNavigation.Name" class="control-label"></label>
+                    </div>
+                    <div class="col-8 col-lg-10">
+                        <select asp-for="Product.ProCategoryNo" class="form-select" asp-items="ViewBag.ProCategoryName"></select>
+                    </div>
                 </div>
-                <div class="col-8 col-lg-10">
-                    <input asp-for="Product.Name" class="form-control" />
-                    <span asp-validation-for="Product.Name" class="text-danger"></span>
+                <div class="form-group d-flex align-items-center mb-3 row">
+                    <div class="col-4 col-lg-2 fw-bold fs-5">
+                        <label asp-for="Product.Price" class="control-label"></label>
+                    </div>
+                    <div class="col-8 col-lg-10">
+                        <input asp-for="Product.Price" class="form-control" />
+                        <span asp-validation-for="Product.Price" class="text-danger"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group d-flex align-items-center mb-3 row">
-                <div class="col-4 col-lg-2">
-                    <label asp-for="Product.ProCategoryNoNavigation.Name" class="control-label"></label>
+                <div class="form-group d-flex align-items-center mb-3 row">
+                    <div class="col-4 col-lg-2 fw-bold fs-5">
+                        <label asp-for="Product.Status" class="control-label"></label>
+                    </div>
+                    <div class="col-8 col-lg-10">
+                        <select asp-for="Product.Status" class="form-select" asp-items="ViewBag.StatusList"></select>
+                    </div>
                 </div>
-                <div class="col-8 col-lg-10">
-                    <select asp-for="Product.ProCategoryNo" class="form-select" asp-items="ViewBag.ProCategoryName"></select>
+                <div class="form-group d-flex align-items-center mb-3 row">
+                    <div class="col-4 col-lg-2 fw-bold fs-5">
+                        <label asp-for="Product.ReleaseDate" class="control-label"></label>
+                    </div>
+                    <div class="col-8 col-lg-10">
+                        <input asp-for="Product.ReleaseDate" class="form-control" value="@(Model.Product.ReleaseDate.ToString("yyyy-MM-dd"))" />
+                        <span asp-validation-for="Product.ReleaseDate" class="text-danger"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group d-flex align-items-center mb-3 row">
-                <div class="col-4 col-lg-2">
-                    <label asp-for="Product.Price" class="control-label"></label>
+                <div class="form-group d-flex justify-content-end mt-2">
+                    <button type="submit" class="btn btn-topbar fw-bold fs-5 col-6">
+                        <i class="fa-solid fa-file"></i>保存修改
+                    </button>
                 </div>
-                <div class="col-8 col-lg-10">
-                    <input asp-for="Product.Price" class="form-control" />
-                    <span asp-validation-for="Product.Price" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group d-flex align-items-center mb-3 row">
-                <div class="col-4 col-lg-2">
-                    <label asp-for="Product.Status" class="control-label"></label>
-                </div>
-                <div class="col-8 col-lg-10">
-                    <select asp-for="Product.Status" class="form-select" asp-items="ViewBag.StatusList"></select>
-                </div>
-            </div>
-            <div class="form-group d-flex align-items-center mb-3 row">
-                <div class="col-4 col-lg-2">
-                    <label asp-for="Product.ReleaseDate" class="control-label"></label>
-                </div>
-                <div class="col-8 col-lg-10">
-                    <input asp-for="Product.ReleaseDate" class="form-control" />
-                    <span asp-validation-for="Product.ReleaseDate" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group d-flex justify-content-end">
-                <input type="submit" value="保存修改" class="btn btn-primary" />
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
-
-<h4>編輯圖片</h4>
-<hr />
-<div class="row">
-    <div class="col-10 col-lg-8 m-5">
-        <div id="imgContainer" style="display:flex; gap:5px; flex-wrap:wrap;">
-            <partial name="_PicturePartial" id="_PicturePartial" />
+<div class="p-4 mt-3 rounded-4 bg-white">
+    <h3 class="fw-bold mb-3"><i class="fa-solid fa-images me-2"></i>商品圖片</h3>
+    <div class="row m-1 border border-1 rounded">
+        <div class="col-6 m-5">
+            <div id="imgContainer" style="display:flex; gap:5px; flex-wrap:wrap; width:1300px;">
+                <partial name="_PicturePartial" id="_PicturePartial"/>
+            </div>
+            <div class="border border-2 rounded rounded-3 p-3 mt-3 mb-3">
+                <form asp-controller="Product" asp-action="ImgUpload" id="ImgEdit" method="post" enctype="multipart/form-data">
+                    <!-- 補hidden，讓binder知道ProImages存在 -->
+                    <input type="hidden" asp-for="Product.No" />
+                    <input type="hidden" asp-for="ProImage.ProductNo" value="@Model.Product.No" />
+                    <div id="previewContainer" class="mt-2 ms-3" style="display:flex; gap:5px; flex-wrap:wrap;">
+                        <!-- 縮圖動態生成 -->
+                    </div>
+                    <div class="mt-3 ms-3 mb-3 d-flex">
+                        <!-- 真正的input隱藏 -->
+                        <input type="file" asp-for="ImageFiles" id="ImageFiles" class="d-none" accept="image" multiple />
+                        <!-- 自訂的觸發按鈕 -->
+                        <label for="ImageFiles" class="align-self-center btn btn-secondary rounded-0 rounded-start fs-5">選擇圖片</label>
+                        <!-- 顯示已選幾張 -->
+                        <label id="fileCount" class="align-self-center text-muted border border-1 fs-5" style="width: 60%; padding: 6px 0 6px 12px;">尚未選擇圖片</label>
+                        <!-- 上傳按鈕 -->
+                        <button type="submit" class="align-self-center btn btn-primary btnUpload rounded-0 rounded-end fs-5">上傳圖片</button>
+                    </div>
+                </form>
+            </div>
+            <div class="d-flex justify-content-end mt-2">
+                <button id="img-btn-save" class="btn btn-topbar fw-bold fs-5 col-6"><i class="fa-solid fa-file"></i>保存修改</button>
+            </div>
         </div>
-        <form asp-controller="Product" asp-action="ImgUpload" id="ImgEdit" method="post" enctype="multipart/form-data">
-            <!-- 補hidden，讓binder知道ProImages存在 -->
-            <input type="hidden" asp-for="Product.No" />
-            <input type="hidden" asp-for="ProImage.ProductNo" value="@Model.Product.No" />
-            <div id="previewContainer" style="display:flex; gap:5px; flex-wrap:wrap;">
-                <!-- 縮圖動態生成 -->
-            </div>
-
-            <div class="input-group mt-3">
-                <!-- 真正的input隱藏 -->
-                <input type="file" asp-for="ImageFiles" id="ImageFiles" class="d-none" accept="image" multiple />
-                <!-- 自訂的觸發按鈕 -->
-                <label for="ImageFiles" class="align-self-center btn btn-secondary rounded-start">選擇圖片</label>
-                <!-- 顯示已選幾張 -->
-                <label id="fileCount" class="align-self-center text-muted border border-1" style="padding: 6px 0 6px 12px; width: 300px;">尚未選擇圖片</label>
-                <!-- 上傳按鈕 -->
-                <button type="submit" class="align-self-center btn btn-primary btnUpload">上傳圖片</button>
-            </div>
-        </form>
-        <button id="img-btn-save" class="btn btn-primary">保存修改</button>
     </div>
-</div> 
-
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
 
 <script>
     $(document).ready(function() {
@@ -146,13 +179,13 @@
         let fileList = [];
         const maxFiles = 5;
 
-        $(document).on('click', '.del-btn-uped', function() {
+        $(document).on('click', '.del-btn', function() {
             const imgId = $(this).closest('.imgdiv').data("imgid");
             deletedIds.push(imgId);
             $(this).closest('.imgdiv').remove();
         });
 
-        
+
         $('#img-btn-save').on('click', function(){
             // alert("img-btn-save");
             const ImgData = [];
@@ -263,16 +296,16 @@
                          .attr("src", e.target.result)
                          .attr("title", file.name)
                          .css({ width: "100%", height: "100%", objectFit: "cover", border: "1px solid #ccc", padding: "2px" });
-                    
+
                     const order = $("<div>")
                          .addClass("d-flex justify-content-end align-items-center")
-                         .css({ margin: "2px" })
-                    
+                         
+
                     const label = $("<label>")
                           .attr({ id: 'ProImages.ImgOrder' })
                           .text("圖片順序:")
-                          .addClass("p-0")
-                          .css({ width: "80px" })
+                          .addClass("p-0 fs-5")
+                          .css({ width: "100px" })
 
                     const input = $('<input>')
                           .attr({ type: 'number', id: 'ProImages.ImgOrder', name: `ImageOrders[${index}]`, min: 1, max: maxFiles })
