--- a/StarProject/Views/Product/_ProductRows.cshtml
+++ b/StarProject/Views/Product/_ProductRows.cshtml
@@ -25,7 +25,20 @@
             @Html.DisplayFor(modelItem => item.UpdateDate)
         </td>
         <td style="width:116px; text-align: center;">
-            <button type="button" class="btn btn-color btn-sm btn-detail">
+            <button type="button"
+                    class="btn btn-color btn-sm btn-detail"
+                    data-id="@item.No"
+                    data-name="@item.Name"
+                    data-category="@item.ProCategoryNoNavigation.Name"
+                    data-price="@item.Price"
+                    data-status="@item.Status"
+                    data-releasedate="@item.ReleaseDate.ToString("yyyy-MM-dd HH:mm")"
+                    data-updatedate="@item.UpdateDate.ToString("yyyy-MM-dd HH:mm")"
+                    data-image="@(item.ProductImages
+                        .OrderBy(p => p.ImgOrder)
+                        .FirstOrDefault()?.Image ?? "")"
+                    data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasDetail">
                 詳細內容
             </button>
         </td>
