--- a/StarProject/Views/LostInfo/Index.cshtml
+++ b/StarProject/Views/LostInfo/Index.cshtml
@@ -202,7 +202,7 @@
 
 		<!-- 分頁 -->
         <div id="pagination">
-			@await Html.PartialAsync("_LostInfoPagination", Model)
+			@await Html.PartialAsync("_Pagination", Model)
 		</div>
         
 
