--- a/StarProject/wwwroot/css/TextEditing.css
+++ b/StarProject/wwwroot/css/TextEditing.css
@@ -19,31 +19,6 @@
     --ck-content-line-height: 1.6; /* 行高舒適 */
 }
 
-
-.btn-topbar {
-    --bs-btn-bg: rgb(250, 208, 72);
-    --bs-btn-border-color: rgb(250, 208, 72);
-    --bs-btn-hover-bg: rgba(250, 208, 72, 0.692);
-    --bs-btn-hover-border-color: rgba(250, 208, 72, 0.692);
-    --bs-btn-focus-shadow-rgb: 217, 164, 6;
-    --bs-btn-active-bg: #ffcd39;
-    --bs-btn-active-border-color: #ffc720;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-}
-
-.btn-outline-back {
-    --bs-btn-color: #DC3545;
-    --bs-btn-border-color: #DC3545;
-    --bs-btn-hover-color: #DC3545;
-    --bs-btn-hover-bg: #f8e6e9;
-    --bs-btn-hover-border-color: #DC3545;
-    --bs-btn-focus-shadow-rgb: 255, 193, 7;
-    --bs-btn-active-color: #DC3545;
-    --bs-btn-active-border-color: #DC3545;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-gradient: none;
-}
-
 .text-distance {
     letter-spacing: 5px; /* 正值：字母間距變大，負值：變小 */
     text-align: center; /* 文字置中 */
@@ -58,4 +33,7 @@
     min-height: 350px; /* 編輯區最小高度 */
 }
 
-
+figcaption {
+    min-height: 0 !important;
+    height: auto !important;
+}
